k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puneintern-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: puneintern-backend
  template:
    metadata:
      labels:
        app: puneintern-backend
    spec:
      containers:
        - name: backend
          image: internship-portal-backend:postgres
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
