k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puneintern-backend
spec:
  selector:
    app: puneintern-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
