k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puneintern-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: puneintern-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: puneintern-frontend
                port:
                  number: 80
